crates/ffmpeg/src/io/snapshots/scuffle_ffmpeg__io__output__tests__test_output_write_mp4_header.snap
---
source: crates/ffmpeg/src/io/output.rs
expression: get_boxes!(output)
snapshot_kind: text
---
[
    Ftyp(
        Ftyp {
            header: BoxHeader {
                box_type: b"ftyp",
            },
            major_brand: Unknown(
                [
                    105,
                    115,
                    111,
                    109,
                ],
            ),
            minor_version: 512,
            compatible_brands: [
                Unknown(
                    [
                        105,
                        115,
                        111,
                        109,
                    ],
                ),
                Unknown(
                    [
                        105,
                        115,
                        111,
                        50,
                    ],
                ),
                Avc1,
                Mp41,
            ],
        },
    ),
    Unknown(
        (
            BoxHeader {
                box_type: b"free",
            },
            b"",
        ),
    ),
    Mdat(
        Mdat {
            header: BoxHeader {
                box_type: b"mdat",
            },
            data: [
                b"\xe3\xb0\xc4B\x98\xfc\x1c\x14\x9a\xfb\xf4\xc8\x99o\xb9$'\xaeA\xe4d\x9b\x93L\xa4\x95\x99\x1bxR\xb8U",
            ],
        },
    ),
]
