crates/ffmpeg/src/io/snapshots/scuffle_ffmpeg__io__output__tests__test_output_write_mp4_packets.snap
---
source: crates/ffmpeg/src/io/output.rs
expression: get_boxes!(output)
snapshot_kind: text
---
[
    Ftyp(
        Ftyp {
            header: BoxHeader {
                box_type: b"ftyp",
            },
            major_brand: Unknown(
                [
                    105,
                    115,
                    111,
                    109,
                ],
            ),
            minor_version: 512,
            compatible_brands: [
                Unknown(
                    [
                        105,
                        115,
                        111,
                        109,
                    ],
                ),
                Unknown(
                    [
                        105,
                        115,
                        111,
                        50,
                    ],
                ),
                Avc1,
                Mp41,
            ],
        },
    ),
    Unknown(
        (
            BoxHeader {
                box_type: b"free",
            },
            b"",
        ),
    ),
    Mdat(
        Mdat {
            header: BoxHeader {
                box_type: b"mdat",
            },
            data: [
                b"\xb4)p\ne\x93/\x8d#\xa93\xc7\xf2\xd6\xcf\xb2\xd6\x9b\x83\xde\xdb_\x98\xeaOB\xb5\xa5\xafy\xb9\xbe",
            ],
        },
    ),
]
